pulled left align bug from gilad and logo not showing on #page refresh

--- a/main/gallery/gallery.sass
+++ b/main/gallery/gallery.sass
@@ -63,6 +63,7 @@ div#img_viewer
 
 	& > div#caption
 		@include fourWayTextShadow(1px, 1px, 0, black)
+		text-align: center
 		position: fixed
 		font-size: 24px
 		color: white
